LATEST

  * Removed a JastAdd rewrite that normalized the TypeBound list of
  TypeVariable nodes.  The TypeBound list child of TypeVariable was renamed to
  Bound, and attributes emulating the old TypeBound interface were added.  The
  new attributes getNumTypeBound(), getTypeBound(int), and getTypeBoundList()
  are used to work with the normalized list of type variable bounds. If the
  actual declared bounds are needed, use getNumBound(), getBound(int), and
  getBoundList().
  * Rewrote TypeVariable.firstBound() - it no longer returns the least upper
  bound of the type variable. TypeVariable.firstBound() now returns the first
  type bound or the Object type access if the type variable is unbounded.  Use
  TypeVariable.lubType() instead to get the least upper bound.
  * Removed attribute TypeVariable.lowerBound() because the name was
  misleading and it was only used in one place.
  * Deleted SimpleSet.fullSet as it was unused.
  * Removed ID token in ThisAccess and SuperAccess.
  * Changed Expr.mayAccess(Variable) to a synthesized attribute (was
    inter-type declared method).
  * Removed method TypeDecl.mayAccess(Expr, Variable).
  * Added attribute TypeDecl.mayAccess(TypeDecl, Variable).
  * Added TypeDecl.keepAccessibleFields(TypeDecl, SimpleSet<Variable>) as a
    helper method for field access control.
  * Added attribute MethodAccess.hasUnknownArg() to check if any of the
    arguments to a method call has unknown type.

2018-01-25  Version 8.1.1

  * Unified diamond type inference with method type inference.
    A synthetic method access is now used by DiamondAccess to infer type
    arguments. This means that much more of the method type inference
    implementation can be reused directly by the diamond implementation.
  * Removed attributes:
      - DiamondAccess.mostSpecific(_, _)
      - DiamondAccess.potentiallyApplicable(_)
      - DiamondAccess.applicableBySubtyping(_, _)
      - DiamondAccess.applicableByMethodInvocationConversion(_, _)