@@ -308,6 +308,12 @@ aspect FrontendMain {
       // Non-javac options.
       options.addKeyOption("-profile"); // Output profiling information.
       options.addKeyOption("-debug"); // Extra debug checks and information.
+
+      // These unused nonstandard options with arguments are here added so that
+      // their arguments are discarded when parsing command-line options.
+      options.addKeyValueOption("-Xmaxerrs");
+      options.addKeyValueOption("-Xmaxwarns");
+      options.addKeyValueOption("-Xstdout");
     }
 
     /**
