@@ -1,5 +1,8 @@
 LATEST
 
+  * The Options class has been moved from the aspect file
+  java4/frontend/Options.jadd to the plain Java file
+  src/frontend/org/extendj/ast/Options.java.
   * Removed a JastAdd rewrite that normalized the TypeBound list of
   TypeVariable nodes.  The TypeBound list child of TypeVariable was renamed to
   Bound, and attributes emulating the old TypeBound interface were added.  The
